--- a/jQuery Basics/Simple Lightbox/css/style.css
+++ b/jQuery Basics/Simple Lightbox/css/style.css
@@ -28,3 +28,12 @@ a {
   text-decoration: none;
 }
 /** Start Coding Here **/
+#overlay {
+  background: rgba(0,0,0,0.7);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
