--- a/jQuery Basics/Mobile Dropdown Menu/css/style.css
+++ b/jQuery Basics/Mobile Dropdown Menu/css/style.css
@@ -41,19 +41,11 @@ ul li.selected a {
 }
 
 select {
-  width: 84%;
+  width: 94%;
   margin: 11px  0 11px 2%;
   float: left;
 }
 
-button {
-  display: inline-block;
-  line-height: 18px;
-  padding: 0 5px;
-  margin: 11px 2% 11px 0;
-  float: right;
-  width: 10%;
-}
 h1 {
   margin: 40px 0 10px;
   text-align: center;
@@ -64,3 +56,31 @@ p {
   color: #777;
 }
 /** Start Coding Here **/
+
+/* 
+Modify css to hide links on small widths and show button and select. 
+Also hide select and button on larger widths, while showing links.
+*/
+
+@media (min-width: 320px) and (max-width: 568px) {
+  #menu ul {
+    display: none;
+  }
+}
+
+@media (min-width: 568px) {
+  #menu select, #menu button {
+    display: none;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
